--- a/package.json
+++ b/package.json
@@ -53,7 +53,10 @@
     "tap": "10.1.0"
   },
   "dependencies": {
+    "axios": "0.15.3",
+    "jws": "3.1.4",
     "muicss": "0.9.9-rc2",
-    "next": "1.2.3"
+    "next": "1.2.3",
+    "simple-encryptor": "1.1.0"
   }
 }
