--- a/package.json
+++ b/package.json
@@ -10,13 +10,13 @@
     "url": "https://github.com/zrrrzzt"
   },
   "engines": {
-    "node": ">=7.5.0"
+    "node": ">=7.6.0"
   },
   "scripts": {
-    "test": "standard && nsp check && tap --reporter=spec test/**/*.js",
-    "test-offline": "standard && tap --reporter=spec test/**/*.js",
-    "coverage": "tap test/**/*.js --coverage",
-    "coveralls": "tap --cov --coverage-report=lcov test/**/*.js && cat coverage/lcov.info | coveralls",
+    "test": "standard && nsp check && ava",
+    "test-offline": "standard && ava",
+    "coverage": "nyc ava",
+    "coveralls": "nyc ava && nyc report --reporter=lcov && cat coverage/lcov.info | coveralls",
     "setup": "npm install",
     "standard-fix": "standard --fix",
     "dev": "next",
@@ -25,10 +25,9 @@
     "now-deploy": "npm test && now alias"
   },
   "keywords": [
-    "dashboard",
+    "forms",
     "next",
-    "status",
-    "rambo",
+    "cs",
     "Telemark fylkeskommune"
   ],
   "repository": {
@@ -44,13 +43,15 @@
     ],
     "env": {
       "NODE_ENV": "production"
-    }
+    },
+    "type": "npm"
   },
   "devDependencies": {
+    "ava": "0.18.2",
     "coveralls": "2.11.16",
     "nsp": "2.6.2",
-    "standard": "8.6.0",
-    "tap": "10.1.0"
+    "nyc": "10.1.2",
+    "standard": "8.6.0"
   },
   "dependencies": {
     "axios": "0.15.3",
