--- a/package.json
+++ b/package.json
@@ -57,7 +57,9 @@
     "axios": "0.15.3",
     "jws": "3.1.4",
     "muicss": "0.9.9-rc2",
-    "next": "1.2.3",
+    "next": "^2.0.0-beta.36",
+    "react": "15.4.2",
+    "react-dom": "15.4.2",
     "simple-encryptor": "1.1.0"
   }
 }
