--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
   },
   "dependencies": {
     "axios": "0.15.3",
+    "bluebird": "3.4.7",
     "jws": "3.1.4",
     "muicss": "0.9.9-rc2",
     "next": "^2.0.0-beta.36",
