--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "node": ">=10.14.2"
   },
   "scripts": {
-    "test": "standard && nsp check && ava",
+    "test": "standard && npm audit && ava",
     "test-offline": "standard && ava",
     "coverage": "nyc ava",
     "coveralls": "nyc ava && nyc report --reporter=lcov && cat coverage/lcov.info | coveralls",
@@ -22,7 +22,8 @@
     "dev": "next",
     "build": "next build",
     "start": "next start",
-    "now-deploy": "npm test && now alias"
+    "now-deploy": "npm test && now alias",
+    "refresh": "rm -rf node_modules && rm package-lock.json && npm install"
   },
   "keywords": [
     "forms",
@@ -50,7 +51,6 @@
   "devDependencies": {
     "ava": "1.0.1",
     "coveralls": "3.0.2",
-    "nsp": "3.2.1",
     "nyc": "13.1.0",
     "standard": "12.0.1"
   },
