--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
   },
   "devDependencies": {
     "ava": "1.0.1",
+    "babel-eslint": "10.0.1",
     "coveralls": "3.0.2",
     "nyc": "13.1.0",
     "standard": "12.0.1"
@@ -63,5 +64,18 @@
     "react": "16.7.0",
     "react-dom": "16.7.0",
     "simple-encryptor": "2.0.0"
+  },
+  "standard": {
+    "ignore": [
+      "/static/*.js"
+    ],
+    "parser": "babel-eslint",
+    "parserOptions": {
+      "ecmaFeatures": {
+        "experimentalObjectRestSpread": true,
+        "jsx": true
+      },
+      "sourceType": "module"
+    }
   }
 }
